test/classes/vass/ref-like-intents/ref-subclass.good
ref-subclass.chpl:14: error: unresolved call 'procRefC(D)'
ref-subclass.chpl:6: note: candidates are: procRefC(ref arg: C)
